# HERoEHS-ALICE-Motion

alice_arm_module/: CMakeLists.txt  package.xml
alice_balance_control/: CMakeLists.txt  package.xml
alice_balance_control/include/alice_balance_control/: alice_balance_control.h  balance_pd_control.h  balance_pid_control.h  control_function.h  zmp_calculation_function.h
alice_balance_control/src/: alice_balance_control.cpp  balance_pd_control.cpp  balance_pid_control.cpp  control_function.cpp  zmp_calculation_function.cpp
alice_base_module/: CMakeLists.txt  package.xml
alice_base_module/data/: init_offset_pose.yaml  init_pose.yaml
alice_base_module/include/alice_base_module/: base_module.h
alice_base_module/src/: base_module.cpp
alice_kinematics_dynamics/: CMakeLists.txt  package.xml
alice_kinematics_dynamics/include/alice_kinematics_dynamics/: kinematics_dynamics.h  kinematics_dynamics_define.h  link_data.h
alice_kinematics_dynamics/src/: kinematics_dynamics.cpp  link_data.cpp
alice_leg_module/: CMakeLists.txt  package.xml
alice_leg_module/include/alice_leg_module/: alice_leg_module.h
alice_leg_module/src/: alice_leg_module.cpp  ros_communication.cpp
alice_manager/: CMakeLists.txt  package.xml
alice_manager/config/: alice.robot  dxl_init.yaml  offset.yaml  offset1.yaml  offset2.yaml
alice_manager/launch/: alice_manager.launch  alice_manager_1.launch  alice_manager_2.launch  alice_manager_gazebo.launch  alice_manager_python_node.launch
alice_manager/src/: alice_manager_node.cpp  alice_manager_python_node.cpp
alice_online_walking_module/: CMakeLists.txt  package.xml
alice_online_walking_module/include/alice_online_walking_module/: alice_online_walking.h  online_walking_module.h
alice_online_walking_module/src/: alice_online_walking.cpp  online_walking_module.cpp
alice_upper_body_module/: CMakeLists.txt  package.xml
alice_upper_body_module/include/alice_upper_body_module/: alice_upper_body_module.h
alice_upper_body_module/log_data/: log_data.txt
alice_upper_body_module/src/: alice_upper_body_module.cpp  ros_communication.cpp
